# adult-sub-monitor

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
.serena/: project.yml
config/: config.example.yaml
docs/: DESIGN.md  TODO.md
scripts/: setup-branch-protection.sh
src/adult_sub_monitor/: __init__.py  __main__.py  browser.py  config.py  db.py  discord.py  filters.py  main.py  models.py
src/adult_sub_monitor/sites/: base.py  deeper_tushy.py  manyvids.py  venus_platform.py  vixen_media_group_platform.py  wowgirls_platform.py
tests/: conftest.py  test_browser.py  test_config.py  test_db.py  test_discord.py  test_filters.py  test_main.py
tests/fixtures/manyvids/: creator_store_mobile_p1.html  creator_store_regular_p1.html  creator_store_regular_p2_known.html  video_detail_with_tags.html
tests/sites/: test_base.py  test_deeper_tushy.py  test_manyvids.py  test_venus_platform.py  test_vixen_media_group_platform.py  test_wowgirls_platform.py
