[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adult-sub-monitor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "apscheduler>=3.11.2",
    "aiohttp>=3.13.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "aioresponses",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF", "N", "PT", "TID"]

[tool.ruff.format]
indent-style = "space"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "duplicate-code",
    "fixme",
]

[tool.pylint.main]
persistent = false

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
